--- a/MobileBankingApp/log.properties
+++ b/MobileBankingApp/log.properties
@@ -1,13 +1,18 @@
 # initialize root logger with level ERROR for stdout and fout
-log4j.rootLogger=ERROR,stdout,fout
+log4j.rootLogger=INFO, consoleAppender, fileAppender
 # set the log level for these components
 log4j.logger.com.endeca=INFO
 log4j.logger.com.endeca.itl.web.metrics=INFO
 
-# add a FileAppender to the logger fout
-log4j.appender.fout=org.apache.log4j.FileAppender
+log4j.appender.consoleAppender = org.apache.log4j.ConsoleAppender
+log4j.appender.consoleAppender.layout = org.apache.log4j.PatternLayout
+log4j.appender.consoleAppender.layout.ConversionPattern=[%t] %-5p %c %x - %m%n
+
+
+# add a FileAppender to the logger fileAppender
+log4j.appender.fileAppender=org.apache.log4j.FileAppender
 # create a log file
-log4j.appender.fout.File=errors.log
+log4j.appender.fileAppender.File=C:\Users\Kiryl\Revature.Projects\P0\MobileBankingApp\errors.log
 log4j.appender.fout.layout=org.apache.log4j.PatternLayout
 # use a more detailed message pattern
 log4j.appender.fout.layout.ConversionPattern=%p\t%d{ISO8601}\t%r\t%c\t[%t]\t%m%n
