--- a/MobileBankingApp/log.properties
+++ b/MobileBankingApp/log.properties
@@ -12,7 +12,7 @@ log4j.appender.consoleAppender.layout.ConversionPattern=[%t] %-5p %c %x - %m%n
 # add a FileAppender to the logger fileAppender
 log4j.appender.fileAppender=org.apache.log4j.FileAppender
 # create a log file
-log4j.appender.fileAppender.File=C:\Users\Kiryl\Revature.Projects\P0\MobileBankingApp\errors.log
+log4j.appender.fileAppender.File= "./errors.log"
 log4j.appender.fout.layout=org.apache.log4j.PatternLayout
 # use a more detailed message pattern
 log4j.appender.fout.layout.ConversionPattern=%p\t%d{ISO8601}\t%r\t%c\t[%t]\t%m%n
